fix bug impacting svg alignment on window maximise

--- a/homepage.css
+++ b/homepage.css
@@ -165,20 +165,25 @@ main {
     }
 
     .search {
-        width: 70%;
+        width: 50%;
+        max-width: 560px;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
         position: relative;
     }
 
+    .search > form {
+        box-sizing: border-box;
+        width: 100%;
+    }
+
         .search-bar {
-            width: 450px;
             border-radius: 20px;
             border: solid 1.25px  #dadce0;
             height: 30px;
+            width: 100%;
             padding: 2px 23px 2px 35px;
-            
         }
 
         .search-bar:hover {
@@ -187,17 +192,17 @@ main {
 
         .search-icon {
             width: 20px;
-            position: absolute;
-            left: 105px;
-            top: 9px;
             fill: #dadce0;
+            position: absolute;
+            margin-left: 15px;
+            margin-top: 2px;
         }
 
         .search-voice {
-            width: 20px;
+            width: 20px;  
             position: absolute;
-            right: 105px;
-            top: 8px;
+            right: 15px;
+            margin-top: 2px;         
         }
 
     .search-buttons {
